services/foundry-vtt/fred/app/resources/httproute-external.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: foundry-vtt-external
spec:
  parentRefs:
    - name: traefik-external
      namespace: traefik
  hostnames:
    - fred.foundry-vtt.wildfreddy.fivebytestudios.com
  rules:
    - backendRefs:
      - name: foundry-vtt-fred
        port: 80
