services/foundry-vtt/fred/app/resources/httproute-intranet.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: foundry-vtt-intranet
spec:
  parentRefs:
    - name: traefik-intranet
      namespace: traefik
  hostnames:
    - fred.foundry-vtt.int.fivebytestudios.com
  rules:
    - backendRefs:
      - name: foundry-vtt-fred
        port: 80
